--- a/css/styles_for_layout.css
+++ b/css/styles_for_layout.css
@@ -36,10 +36,16 @@
     border-radius: 5px 5px 0px 0px;
     border-bottom: none;
     width: 203px;
+    position: relative;
 }
-#hidden-radio-first-item:checked ~ .section-tabs__tabs .section-tabs__first-tab::after{
-    content: ;
+#hidden-radio-first-item:checked ~ .section-tabs__tabs .section-tabs__first-tab::after,
+#hidden-radio-second-item:checked ~ .section-tabs__tabs .section-tabs__second-tab::after,
+#hidden-radio-third-item:checked ~ .section-tabs__tabs .section-tabs__third-tab::after{
+    content: '';
     display: block;
+    position: absolute;
+    z-index: 1;
+    top: 35px;
     width: 203px;
     height: 10px;
     background-color: white;
